geoparser_app/static/css/style.css
html, body {
	height: 100%;
}

.navbar {
	margin-bottom: 0px;
}

.row {
	height: 0px;
	margin-right: 0px;
}

.full_height {
	height: 100%;
}

.main_height {
	height: 96%;
}

/* .btn {
	background-color: #bbffff;
	color: #000000;
	border-radius: 0px;
}
 */
.status {
	float: right;
}

#navbar {
	background-color: #595959;
	border-radius: 0px;
	border: none;
	border-bottom: double 1px #ffffff;
}

#navbar p {
	font-size: 30px;
	padding-bottom: 0xp;
	font-weight: 200;
	color: white;
}

#steps {
	background-color: #595959;
	width: 100%;
	font-size: 30px;
	color: #ffffff;
	font-weight: 100;
	margin-top: 0px;
}

#file_input {
	width: 100%;
}

#sidebar {
	background-color: #c3c3c3;
}

#sidebar_title {
	background-color: #aefff0;
}

#sidebar_title h1 {
	margin-top: 0px;
}

#upload_file {
	
}

#uploaded_files {
	
}

#upload_button {
	text-align: right;
}

#start_button {
	text-align: right;
}

#processing {
	background-color: #595959;
}

#map {
	background-color: #595959;
}

#remove {
	padding-left: 10px;
	padding-right: 10px;
	font-weight: 200;
	font-size: 15px;
	float: right;
	color: red;
}

#numFound {
	color: #606060;
	font-size: 20px;
	font-weight: 200;
}

#loading {
	width: 10%;
	float: right;
	margin-right: 5px;
}

#map {
	margin: 0;
	width: 100%;
	height: 100%;
	overflow: hidden;
}

.top-left-input-box {
	z-index: 1001;
	position: absolute;
	left: 0px;
	top: 0px;
}

.input-box-bg {
	outline: 1px solid black;
	background-color: white;
	opacity: 0.8;
}

.top-buffer {
	padding-top: 20px;
}

.bottom-buffer {
	padding-bottom: 20px;
}

.left-buffer {
	padding-left: 10px;
}

.no-left-padding {
	padding-left: 0px;
}

.no-right-padding {
	padding-right: 0px;
}
.center {
	margin: 0 auto;
	float: none;
}

.clear {
	clear: both;
}

.btn-file {
	position: relative;
	overflow: hidden;
}

.btn-file input[type=file] {
	position: absolute;
	top: 0;
	right: 0;
	min-width: 100%;
	min-height: 100%;
	font-size: 100px;
	text-align: right;
	filter: alpha(opacity = 0);
	opacity: 0;
	background: red;
	cursor: inherit;
	display: block;
}

input[readonly] {
	background-color: white !important;
	cursor: text !important;
}

hr {
	margin: 0px;
	border-top: 1px solid #000;
}

.mar-def {
	margin: 5px;
}

.extra-large{
	font-size: 60px;
}

.hide{
	dislay:none;
}

.dropdown-toggle-full-width {
  min-width:auto;
  width:100%;
}
.dropdown-menu-full-width {
  min-width:auto;
  width:100%;
}

